Fixed jumpy UI on load more click

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 form{
     width: 100%;
 }
+.game-grid-container{
+    display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+    /* align-items: flex-start;
+    justify-content: center;    */
+}
+.game-grid-items{
+    padding: 0.5rem;
+}
+@media(min-width: 40rem) {
+    .game-grid-items{
+        width: 50%;
+    }
+  }
+  @media(min-width: 56rem) {
+    .game-grid-items{
+        width: 33%;
+    }
+}
+    @media(min-width: 120rem) {
+        .game-grid-items{
+            width: 25%;
+        }
+  }
